--- a/practica04.html
+++ b/practica04.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>PRACTICA 04</title>
+    <title>OBTENER UBICACION</title>
 </head>
 <body>
     <center>
