--- a/practica04.html
+++ b/practica04.html
@@ -12,7 +12,7 @@
     <button class="button" onclick="getUbication()">OBTENER UBICACION</button>
 
     <div id="mapa">
-        <img id="imagenmapa" src="" alt="Imagen de Mapa">
+        <img id="imagenmapa" src="https://dbdzm869oupei.cloudfront.net/img/vinylrugs/preview/18762.png" alt="Imagen de Mapa">
     </div>
 </center>
 <script src="app.js"></script>
