--- a/practica04.html
+++ b/practica04.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <center>
-    <button class="button" onclick="muestraUbication()">OBTENER UBICACION</button>
+        <button onclick="obtieneUbicacion()">OBTENER UBICACION</button>
 
     <div id="mapa">
         <img id="imagenmapa" src="" alt="Imagen de Mapa">
