--- a/practica04.html
+++ b/practica04.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <center>
-        <button onclick="obtieneUbicacion()">OBTENER UBICACION</button>
+        <button onclick="obtieneUbicacion()">Obtener ubicación</button>
 
-    <div id="mapa">
-        <img id="imagenmapa" src="" alt="Imagen de Mapa">
-    </div>
+        <div id="mapa">
+            <img id="imagenmapa" src="" alt="Imagen de Mapa">
+        </div>
+    
+    
 </center>
 <script src="app.js"></script>
 </body>
