--- a/practica04.html
+++ b/practica04.html
@@ -11,7 +11,7 @@
     <center>
         <button onclick="obtieneUbicacion()">Obtener ubicación</button>
 
-        <div id="mapa">
+        <div class="button" id="mapa">
             <img id="imagenmapa" src="" alt="Imagen de Mapa">
         </div>
     
