--- a/practica04.html
+++ b/practica04.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <center>
-        <button onclick="obtieneUbicacion()">Obtener ubicación</button>
+        <button class="button" onclick="obtieneUbicacion()">Obtener ubicación</button>
 
-        <div class="button" id="mapa">
+        <div id="mapa">
             <img id="imagenmapa" src="" alt="Imagen de Mapa">
         </div>
     
