--- a/practica04.html
+++ b/practica04.html
@@ -12,7 +12,7 @@
         <button class="button" onclick="obtieneUbicacion()">Obtener ubicación</button>
 
         <div id="mapa">
-            <img id="imagenmapa" src="" alt="Imagen de Mapa">
+            <img id="imgmapa" src="" alt="Imagen de Mapa">
         </div>
     
     
